@@ -1,5 +1,8 @@
 2014-03-06  Ian Dunn  <dunni@gnu.org>
 
+	* sentence.c (sentence_text_changed): Don't add any undo
+	information for goals.
+
 	* sexpr-process-equiv.c (proc_ep): Fixed processing bug.
 
 	* aio.c (aio_save): Version line only writes two digits.
